Move default GDAL version to a Repository Variable
The version used by the "Validate" action and the default one for the
main action is taken from "Repository Variable", i.e.
"${{ vars.GDAL_VERSION }}".

This is mostly to fix the GIS SDK build, which only works on versions
compatible to the current SDK.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,9 +5,6 @@ on:
     branches: [ main, '**-test' ]
   pull_request:
 
-env:
-  GDAL_VERSION: 'v3.8.1'
-
 jobs:
   #
   # Validate GDAL build process
@@ -35,11 +32,11 @@ jobs:
       with:
         python-version: "${{ matrix.python-version }}"
 
-    - name: Set up GDAL ${{ env.GDAL_VERSION }}
+    - name: Set up GDAL ${{ vars.GDAL_VERSION }}
       uses: ./.
       id: setup-gdal
       with:
-        gdal-version: "${{ env.GDAL_VERSION }}"
+        gdal-version: "${{ vars.GDAL_VERSION }}"
         rebuild-cache: true
         use-conda: ${{ matrix.use-conda }}
 
@@ -74,11 +71,11 @@ jobs:
       with:
         python-version: "${{ matrix.python-version }}"
 
-    - name: Set up GDAL ${{ env.GDAL_VERSION }}
+    - name: Set up GDAL ${{ vars.GDAL_VERSION }}
       uses: ./.
       id: setup-gdal
       with:
-        gdal-version: "${{ env.GDAL_VERSION }}"
+        gdal-version: "${{ vars.GDAL_VERSION }}"
         use-conda: ${{ matrix.use-conda }}
 
     - name: Check the package
