Main action can use NuGet packages
The "action.yml" will try to the install the wheel from NuGet package,
if cached version was not found. This requires extra GITHUB_TOKEN input.

The "build-wheel.yml" is modified to allow this, while "build-nuget.yml"
always fully rebuilds.

--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -23,7 +23,7 @@ on:
       rebuild-cache:
         description: "Delete existing wheel cache and create a new one"
         required: false
-        default: "false"
+        default: "true"
         type: choice
         options:
         - false
