Make GDAL v3.8.1 and 'use-conda' default options
Migrate to latest GDAL v3.8.1. This requires git "core.longpaths" to be
enabled before "Clone GDAL sources" step (otherwise it fails with
"Filename too long").

Make 'use-conda' enabled by default. This is to make the default
parameters under Windows independent from GDAL version in
https://www.gisinternals.com/sdk.php.

Update README.md to document the use NuGet packages, which allows to
avoid huge build delays, esp. under Windows with 'use-conda'.

Under macOS with "use-conda=true", always install "unixodbc" as a
workaround for "libiconv" incompatibility issue:
  ImportError: dlopen(...): Symbol not found: (_iconv)

The above still doesn't work with python 3.7, thus this scenario is
excluded in "validate.yml".

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 env:
-  GDAL_VERSION: 'v3.7.3'
+  GDAL_VERSION: 'v3.8.1'
 
 jobs:
   #
@@ -19,9 +19,10 @@ jobs:
         python-version: ['3.12', '3.7']
         use-conda: [true, false]
         exclude:
-          #- os: windows-latest
-          #  use-conda: false    # GIS SDK may not match GDAL version
+          - os: windows-latest
+            use-conda: false    # GIS SDK may not match GDAL version
           - os: macos-latest
+            python-version: 3.7
             use-conda: true     # Still "Symbol not found" issues with conda
       fail-fast: false
 
@@ -58,10 +59,8 @@ jobs:
         python-version: ['3.12']
         use-conda: [true, false]
         exclude:
-          #- os: windows-latest
-          #  use-conda: false
-          - os: macos-latest
-            use-conda: true
+          - os: windows-latest
+            use-conda: false
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
