Workaround removed NuGet from Ubuntu 24.04 runner
Install the linux apt 'nuget' package where necessary:
- actions.yml, step "Try NuGet package"
- build-nuget.yml, step "Create NuGet package"

Note:
The GDAL version in 'validate.yml' is changed to "v3.10.2", only to fix
"macos-latest / use-conda=false" job. The job fails because of Poppler
25.02.00 incompatibility, which is fixed by OSGeo/gdal commit f6d4e06.
Workaround Linux/conda 'use-cache' job failure, by downgrading
'libsqlite' in 'rebuid-cache' job.

--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -142,6 +142,13 @@ jobs:
     - name: Create NuGet package (${{ env.PACKAGE_ID }} ${{ env.PACKAGE_VER }})
       run: |
         $WHEEL_DIR = (Get-Item "${{ steps.setup-gdal.outputs.wheel-path }}").Directory
+        if ("${{ runner.os }}" -eq "Linux") {
+          echo "HACK: NuGet is not included in Ubuntu 24.04/noble, use Windows executable via mono"
+          sudo apt-get update
+          sudo apt-get install -y mono-devel
+          wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+          function nuget {mono nuget.exe $args}
+        }
         nuget pack GDAL.nuspec -BasePath $WHEEL_DIR -Version ${{ env.PACKAGE_VER }} `
             -Properties "id=${{ env.PACKAGE_ID }}"
         if ($LASTEXITCODE) {exit $LASTEXITCODE}
