--- a/action.yml
+++ b/action.yml
@@ -104,6 +104,13 @@ runs:
     run: |
       echo "# Try using a NuGet package"
       if ("${{ inputs.GITHUB_TOKEN }}" -and ("${{ inputs.rebuild-cache }}" -in "false", "")) {
+        if ("${{ runner.os }}" -eq "Linux") {
+          echo "HACK: NuGet is not included in Ubuntu 24.04/noble, use Windows executable via mono"
+          sudo apt-get update
+          sudo apt-get install -y mono-devel
+          wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+          function nuget {mono nuget.exe $args}
+        }
         nuget sources Add -Name github -Source ${{ env.NUGET_SOURCE }} `
             -Username ${{ github.actor }} -Password ${{ inputs.GITHUB_TOKEN }}
       } else {
