--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     type: boolean
   gdal-version:
     description: "Version of GDAL to setup (OSGeo/gdal repository reference)"
-    default: "v3.9.3"
+    default: "v3.10.2"
     required: false
     type: string
   cache-key-prefix:
@@ -157,7 +157,7 @@ runs:
       $SRC_URI = [uri]"${{ inputs.GIS_SDK_URL }}"
       $SRC_ZIP = Join-Path "${{ runner.temp }}" $SRC_URI.Segments[-1]
       echo "Downloading from $SRC_URI..."
-      Invoke-WebRequest -H @{Accept='application/octet-stream'} $SRC_URI -o $SRC_ZIP
+      Invoke-WebRequest -Headers @{Accept='application/octet-stream'} $SRC_URI -OutFile $SRC_ZIP
       if ($proc.ExitCode) {exit $proc.ExitCode}
 
       $GDAL_SDK_DIR="${{ runner.temp }}/gdal_sdk"
