Fix "cmake install" failure
Downgrade setuptools to 80.2, where `command.easy_install` is still not
dummy (pypa/setuptools#917).
The `easy_install.install_wrapper_scripts()` is used by windows build:
https://github.com/OSGeo/gdal/blob/e0292a9/swig/python/setup.py.in#L163

--- a/action.yml
+++ b/action.yml
@@ -254,7 +254,9 @@ runs:
     shell: pwsh
     run: |
       # Prerequisites: numpy is needed to build gdal_array
-      python -m pip install -U pip setuptools wheel numpy
+      # HACK: After setuptools 80.3, the `easy_install.install_wrapper_scripts()` is removed
+      # from `command.easy_install`, see https://github.com/pypa/setuptools/issues/917
+      python -m pip install -U pip "setuptools<80.3" wheel numpy
 
       $BUILD_DIR = New-Item -EA SilentlyContinue -ItemType directory ${{ inputs.base-dir }}/build
       $INSTALL_DIR = New-Item -EA SilentlyContinue -ItemType directory ${{ inputs.base-dir }}/install-gdal
